Fixed some more layout issues with buttons

--- a/src/App.css
+++ b/src/App.css
@@ -46,14 +46,16 @@ input {
 }
 
 .left-column {
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   grid-column: 1;
+  /* max-height: 100%; */
 }
 
 .right-column {
   grid-column: 2;
   display: flex;
   flex-direction: column;
+  /* max-height: 100%; */
 }
 
 .weapon-list {
